Crash on "Grease Pencil Fill" without Grease Pencil Object #63052

Closed
opened 2019-03-28 16:20:21 +01:00 by Philip Holzmann · 7 comments

System Information
Operating system: Windows 10 64 bit
Graphics card: Nvidia GTX 750 Ti

Blender Version
Broken: (2.80, cd92f8ea46, blender2.7, 2019-03-28)

Short description of error
Blender crashes if "Grease Pencil Fill" is run with no Grease Pencil Object.

Exact steps for others to reproduce the error
Default Startup.

  • Press F3 to search for a command, type "Grease", select "Grease Pencil Fill"
  • The mouse turns into a brush.
  • Click.
  • Crash.
**System Information** Operating system: Windows 10 64 bit Graphics card: Nvidia GTX 750 Ti **Blender Version** Broken: (2.80, cd92f8ea4626, blender2.7, 2019-03-28) **Short description of error** Blender crashes if "Grease Pencil Fill" is run with no Grease Pencil Object. **Exact steps for others to reproduce the error** Default Startup. - Press F3 to search for a command, type "Grease", select "Grease Pencil Fill" - The mouse turns into a brush. - Click. - Crash.

Added subscriber: @Foaly

Added subscriber: @Foaly
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-03-28 16:22:41 +01:00
Member

Confirmed, will check

Confirmed, will check
Philipp Oeser removed their assignment 2019-03-28 16:35:11 +01:00
Antonio Vazquez was assigned by Philipp Oeser 2019-03-28 16:35:11 +01:00
Member

Added subscriber: @antoniov

Added subscriber: @antoniov
Member

Sorry, gotta run, @antoniov :mind taking over?

Sorry, gotta run, @antoniov :mind taking over?

This issue was referenced by 1dddb47e48

This issue was referenced by 1dddb47e48ca0661d343a21100de8219bf85ae6a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63052
No description provided.